# bembel

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Doxyfile  README.md  _config.yml  compile.sh  get_eigen.sh  run_latex.sh  run_tests.sh
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: build-n-deploy.yml  build-n-test.yml  build.yml  cmake.yml  code-style.yml  coverage-monitor.yml  end2end-test.yml  monitor-coverage.yml  unittest.yml
Bembel/: AnsatzSpace  ClusterTree  DuffyTrick  DummyOperator  Geometry  H2Matrix  Helmholtz  HomogenisedLaplace  IO  Identity  Laplace  LaplaceBeltrami  LinearForm  LinearOperator  Maxwell  MultiGrid  Potential  Quadrature  Spline
Doxy_out/html/: AnsatzSpace_8hpp_source.html  Basis_8hpp_source.html  Bernstein_8hpp_source.html  Bezierextraction_8hpp_source.html  BlockClusterTree_8hpp_source.html  ClusterTree_8hpp_source.html  Coefficients_8hpp_source.html  Constants_8hpp_source.html  Cubature_8hpp_source.html  Data_8hpp_source.html  DeBoorTP_8hpp_source.html  DeBoor_8hpp_source.html  DifferentialFormEnum_8hpp_source.html  DirichletTrace_8hpp_source.html  DiscreteLinearForm_8hpp_source.html  DiscreteLocalOperator_8hpp_source.html  DiscreteOperator_8hpp_source.html  DiscretePotential_8hpp_source.html  DummyOperator_8hpp_source.html  ElementTreeNode_8hpp_source.html  ElementTree_8hpp_source.html  Error_8hpp_source.html  FAQs.html  FunctionEvaluatorEval_8hpp_source.html  FunctionEvaluator_8hpp_source.html  GaussLegendreRule_8hpp_source.html  GaussLegendre_8hpp_source.html  GaussSquare_8hpp_source.html  GenericMatrix_8hpp_source.html  GeometryIGS_8hpp_source.html  GeometryIO_8hpp_source.html  Geometry_8hpp_source.html  Glue_8hpp_source.html  Grids_8hpp_source.html  H2Matrix_8hpp_source.html  H2Multipole_8hpp_source.html  Helmholtz_2SingleLayerOperator_8hpp_source.html  Helmholtz_2SingleLayerPotential_8hpp_source.html  HomogenisedLaplace_2SingleLayerOperator_8hpp_source.html  HomogenisedLaplace_2SingleLayerPotential_8hpp_source.html  (+2923 more)
LaTeX/: HelmholtzSingle.tex  LaplaceSingle.tex  MaxwellSingle.tex  include.tex
assets/: DOC.md
assets/img/: bembel.eps
coverage/report/: report.AnsatzSpace.hpp.ffc54288099f2d8a44ebefee12b2d905.html  report.Basis.hpp.4e6665df5cbaba055d83b7f0956ebb6e.html  report.Bernstein.hpp.030f22b8996c80284fb02eb58bc9c53c.html  report.Bezierextraction.hpp.e5751484ed1ff88542a5efdc537d9b7c.html  report.BlockClusterTree.hpp.4bd352be3929913088829574688dcd4a.html  report.ClusterTree.hpp.d08c0ffa2ddb4bfdf4d7501cfe30a715.html  report.Coefficients.hpp.d5ae807a3dee7878874d4943e67b1a2e.html  report.Constants.hpp.249f988b7e94aa4188f997649f47af3a.html  report.DeBoor.hpp.9322bccfb9bb84a7a1342ecc48ac0738.html  report.DeBoorTP.hpp.c87de34294c6e6519d1533b4a40f9c8a.html  report.DifferentialFormEnum.hpp.04349070ad165971170e8faa82b7f168.html  report.DirichletTrace.hpp.6a521886f4b9e94244f3dba8479a02e6.html  report.DiscreteLinearForm.hpp.228094f54e2fe5dcd8ac115b08d63d76.html  report.DiscreteLocalOperator.hpp.45fd7661e689a2b4bb7336d2beedd416.html  report.DiscreteOperator.hpp.844bc0fd0c13070513dde735e965e076.html  report.DiscretePotential.hpp.028323d6951d2a5fb647efef57bb6fc6.html  report.DummyOperator.hpp.d052b3cbd8c10697695f5cb518a2915d.html  report.ElementTree.hpp.2b65b0490c94e38b1b1868637624d521.html  report.ElementTreeNode.hpp.3f452d4b9e3f29de3194b56ff506e2ad.html  report.FunctionEvaluator.hpp.3e7fe32c529d14717d80435f0a9b666a.html  report.FunctionEvaluatorEval.hpp.f3c27bba7715b9264cad082f60dff8c6.html  report.GaussLegendreRule.hpp.31a6aa9096eba99ad5dc0dc240c672b8.html  (+52 more)
doc/: CodingGuidelines.dox  Configurations.dox  ContributingToBembel.dox  Contributors.doc  DesignConsiderations.dox  Examples.dox  FAQs.dox  Funding.dox  GettingStarted.dox  Manual.dox  Modules.dox  Publications.dox  StructureRepo.dox  bembel.bib  bembeldoxy.css  bembeldoxy_layout.xml  layout.xml
examples/: AnsatzSpace.cpp  BlockClusterTree.cpp  CMakeLists.txt  Data.hpp  Error.hpp  FullLaplaceWorkflow.cpp  FullMaxwellWorkflow.cpp  Geometry.cpp  GrayScott.cpp  Grids.hpp  HelmholtzAdjointDoubleLayerH2.cpp  HelmholtzDoubleLayerH2.cpp  HelmholtzHypersingularH2.cpp  HelmholtzSingleLayerFull.cpp  HelmholtzSingleLayerH2.cpp  HomogenisedLaplaceSingleLayerFull.cpp  HomogenisedLaplaceSingleLayerH2.cpp  HomogenisedLaplaceSingleLayerH2Matrix.cpp  LaplaceAdjointDoubleLayerH2.cpp  LaplaceBeltrami.cpp  LaplaceBeltramiMultiGrid.cpp  LaplaceDoubleLayerH2.cpp  LaplaceHypersingularH2.cpp  LaplaceSingleLayerFull.cpp  LaplaceSingleLayerH2.cpp  LazyEigenSum.cpp  MassMatrix.cpp  MaxwellSingleLayerFull.cpp  MaxwellSingleLayerH2.cpp  MaxwellSingleLayerScreen.cpp  PrintDat.cpp  Quadrature.cpp  VTKDomainExport.cpp  VTKSurfaceExport.cpp  example_AnsatzSpace.cpp  example_BlockClusterTree.cpp  example_ElementTree.cpp  example_FullLaplaceWorkflow.cpp  example_Geometry.cpp  example_HelmholtzSingleLayerFull.cpp  (+12 more)
scripts/: cpplint.sh
tests/: CMakeLists.txt  CPPLINT.cfg  LazyEigenSum.cpp  Test.hpp  TestGeometries.hpp  TestHelpers.hpp  test_Bernstein.cpp  test_Bezierextraction.cpp  test_DuffyTrick.cpp  test_FMMBackwardTransformation.cpp  test_FMMForwardTransformation.cpp  test_FMMTransferMatrices.cpp  test_GeometryIGS.cpp  test_GeometryIO.cpp  test_GeometryImportAndEval.cpp  test_Glue.cpp  test_Helmholtz.cpp  test_HomogenisedCoefficients.cpp  test_Laplace.cpp  test_Projector.cpp  test_Spline.cpp  test_SurfacePointUpdate.cpp  test_TangentialTrace.cpp
tests/DuffyTrick/: test_DuffyTrick  test_integrate0.hpp  test_integrate1.hpp  test_integrate2.hpp  test_integrate3.hpp  test_integrate4.hpp  test_testFunctions.hpp
tests/examples_as_unittests/: CMakeLists.txt  test_HelmholtzSingleLayerH2.cpp  test_HomogenisedLaplaceSingleLayerFull.cpp  test_HomogenisedLaplaceSingleLayerH2.cpp  test_LaplaceBeltrami.cpp  test_LaplaceSingleLayerH2.cpp  test_MassMatrix.cpp  test_MaxwellSingleLayerFull.cpp  test_MaxwellSingleLayerH2.cpp
unsupported/: CMakeLists.txt  CPPLINT.cfg  README.md
unsupported/examples/: AugmentedEFIE.cpp  AugmentedEFIEBalun.cpp  AugmentedEFIEStabilized.cpp  CMakeLists.txt
(+430 files in other folders)
